# gguf-inspect

./: Cargo.toml  README.md  RESULTS.md
.github/workflows/: ci.yml  release.yml
src/: display.rs  lib.rs  main.rs  parser.rs  types.rs
tests/: integration.rs
