[package]
name = "gguf-inspect"
version = "0.1.0"
edition = "2021"
description = "Inspect GGUF model files and print metadata, tensor info, and architecture details"
license = "MIT"

[dependencies]
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
